--- a/client/package.json
+++ b/client/package.json
@@ -10,9 +10,10 @@
     "link-contracts": "cd lib && ln -s ../../build/contracts contracts"
   },
   "dependencies": {
+    "@openzeppelin/cli": "^2.8.2",
     "next": "^6.1.1",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.0",
     "web3": "^1.3.0"
