--- a/client/package.json
+++ b/client/package.json
@@ -17,5 +17,8 @@
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.0",
     "web3": "^1.3.0"
+  },
+  "devDependencies": {
+    "next-secure-headers": "^2.2.0"
   }
 }
